<resources>
    <string name="app_name">PockemonKu</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="base_stats">Base Status</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="spd">SPD</string>
    <string name="exp">EXP</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="pokemon_name">pokemon name</string>
    <string name="splash_screen">Splash screen is launching</string>
    <string name="title_activity_maps">PokemonMap</string>
    <string name="pokemon_health_value">pokemon health value</string>
    <string name="pokemon_attack_value">pokemon attack value</string>
    <string name="pokemon_defense_value">pokemon defense value</string>
    <string name="pokemon_speed_value">pokemon speed value</string>
    <string name="pokemon_experience_value">pokemon experience value</string>
    <string name="experience_bar">experience value bar</string>
    <string name="speed_value_bar">speed value bar</string>
    <string name="attack_value_bar">attack value bar</string>
    <string name="health_value_bar">health value bar</string>
    <string name="enter_a_pokemon">Please enter a pokemon name here</string>
    <string name="pokemon_map_button">pokemon map button</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="notify_title">pokemon captured</string>
    <string name="pokeball_numbers_0">Numbers:</string>
    <string name="number_of_pokemon_balls">Number of pokemon balls</string>
    <string name="_0">0</string>
    <string name="this_is_an_image">this is an image</string>
    <string name="this_is_how_many_pokemon_balls_you_have_left">This is how many Pokemon balls you have left</string>
    <string name="id">ID</string>
    <string name="gotcha">Gotcha</string>
    <string name="congrats">Congratulations! You have successfully caught it!</string>
    <string name="try_again">Try again</string>
    <string name="oops">Oops! pokemon escaped this time please try again!</string>
    <string name="return_to_map">Return to the map</string>
    <string name="show_pokeball">Show the Pokeball</string>
    <string name="google_maps_key">AIzaSyDqjnUqaKPa_eRL3XaACis0rCNkHIOtQf4</string>
</resources>