<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/pokemon_main">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pokemon_image_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pokemon_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/this_is_how_many_pokemon_balls_you_have_left"
                android:scaleType="centerCrop"
                android:transitionName="transition_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_numberOfBalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="4dp"
                android:text="@string/_0"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pokemon_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.924">

            </TextView>

            <ImageView
                android:id="@+id/iv_catch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/this_is_an_image"
                android:maxWidth="45dp"
                android:maxHeight="45dp"
                android:scaleType="fitCenter"
                android:src="@drawable/pokeball"
                app:layout_constraintBottom_toBottomOf="@+id/tv_numberOfBalls"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_numberOfBalls"
                app:layout_constraintTop_toTopOf="@+id/tv_numberOfBalls"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/pokemon_image_layout"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/pokemon_image_layout"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_image_layout"
            tools:text="Pokemon Name"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/type_name_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/grass"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white_12"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/type_name_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
            tools:text="TypeNameOne"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/type_name_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/poison"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/white_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/type_name_one"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
            tools:text="TypeNameTwo"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/weight"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toStartOf="@+id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_name_one"
            tools:text="1.0 KG" />

        <TextView
            android:id="@+id/height"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toTopOf="@+id/weight"
            tools:text="1 M" />

        <TextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            tools:text="Weight" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/height" />

        <TextView
            android:id="@+id/stats_title"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/base_stats"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_title" />

        <TextView
            android:id="@+id/hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/hp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stats_title" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progress_hp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hp"
            app:layout_constraintTop_toTopOf="@+id/hp"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/colorAccent"
            app:progressView_labelColorInner="@color/white"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="12sp"
            app:progressView_radius="12dp" />

        <TextView
            android:id="@+id/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/atk"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hp" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progress_attack"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/attack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progress_hp"
            app:layout_constraintTop_toTopOf="@+id/attack"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/md_orange_100"
            app:progressView_labelColorInner="@color/white"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="12sp"
            app:progressView_radius="12dp" />

        <TextView
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/def"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attack" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progress_defense"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/defense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progress_hp"
            app:layout_constraintTop_toTopOf="@+id/defense"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/md_blue_200"
            app:progressView_labelColorInner="@color/white"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="12sp"
            app:progressView_radius="12dp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/spd"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defense" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progress_speed"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progress_hp"
            app:layout_constraintTop_toTopOf="@+id/speed"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/flying"
            app:progressView_labelColorInner="@color/white"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="12sp"
            app:progressView_radius="12dp" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/exp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speed" />

        <com.skydoves.progressview.ProgressView
            android:id="@+id/progress_exp"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progress_hp"
            app:layout_constraintTop_toTopOf="@+id/exp"
            app:progressView_colorBackground="@color/white"
            app:progressView_colorProgress="@color/md_green_200"
            app:progressView_labelColorInner="@color/white"
            app:progressView_labelColorOuter="@color/black"
            app:progressView_labelSize="12sp"
            app:progressView_radius="12dp" />

        <ProgressBar
            android:id="@+id/detail_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pokemon_image_layout"
            tools:visibility="visible"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/pokemon_submain"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pokemon_name"
            app:layout_constraintEnd_toStartOf="@+id/pokemon_name"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pokemon_name"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>